Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,3 +39,4 @@ jobs:
         provider: 'azurerm'
         command: 'apply'
         environmentServiceNameAzureRM: 'Az_DevOps'
+      displayName: Terraform Apply
